force-app/main/default/objects/Disclosure_Audit_Event__c/Disclosure_Audit_Event__c.object-meta.xml
<CustomObject>
    <label>Disclosure Audit Event</label>
    <nameField>
        <displayFormat>DA-{00000000}</displayFormat>
        <label>Disclosure Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosure Audit Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>