force-app/main/default/objects/Disclosure_Audit_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Longer descriptive text, possibly including HTML tags, e.g. “John Doe signed the disclosure”</description>
    <inlineHelpText>Longer descriptive text, possibly including HTML tags, e.g. “John Doe signed the disclosure”</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>