force-app/main/default/objects/Disclosure_Audit_Event__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipLabel>Disclosure Audit Events</relationshipLabel>
    <relationshipName>Disclosure_Audit_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>