force-app/main/default/objects/Disclosure_Audit_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Date-time field stating when exactly the event was recorded in Shirley</description>
    <inlineHelpText>Date-time field stating when exactly the event was recorded in Shirley</inlineHelpText>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>