force-app/main/default/objects/Disclosure_Audit_Event__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Brief title of the event, e.g. “Signed”</description>
    <inlineHelpText>Brief title of the event, e.g. “Signed”</inlineHelpText>
    <label>Subject</label>
    <length>99</length>
    <type>Text</type>
</CustomField>