force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/Approval.recordType-meta.xml
<RecordType>
    <fullName>Approval</fullName>
    <active>true</active>
    <description>User has approved a disclosure</description>
    <label>Approval</label>
</RecordType>