force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/Archived.recordType-meta.xml
<RecordType>
    <fullName>Archived</fullName>
    <active>true</active>
    <description>A user has archived a disclosure</description>
    <label>Archived</label>
</RecordType>