force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/Delegation.recordType-meta.xml
<RecordType>
    <fullName>Delegation</fullName>
    <active>true</active>
    <description>User has delegated the disclosure to another user</description>
    <label>Delegation</label>
</RecordType>