force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/InventorSubmitted.recordType-meta.xml
<RecordType>
    <fullName>InventorSubmitted</fullName>
    <active>true</active>
    <description>Inventor Submitted the Disclosure</description>
    <label>InventorSubmitted</label>
</RecordType>