force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/PendingDepartmentApproval.recordType-meta.xml
<RecordType>
    <fullName>PendingDepartmentApproval</fullName>
    <active>true</active>
    <description>The Disclosure is pending for approval from a Department Head</description>
    <label>PendingDepartmentApproval</label>
</RecordType>