force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/Rejection.recordType-meta.xml
<RecordType>
    <fullName>Rejection</fullName>
    <active>true</active>
    <description>User has rejected a disclosure</description>
    <label>Rejection</label>
</RecordType>