force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/Signing.recordType-meta.xml
<RecordType>
    <fullName>Signing</fullName>
    <active>true</active>
    <description>A user has signed the disclosure</description>
    <label>Signing</label>
</RecordType>