force-app/main/default/objects/Disclosure_Audit_Event__c/recordTypes/Unarchived.recordType-meta.xml
<RecordType>
    <fullName>Unarchived</fullName>
    <active>true</active>
    <description>The disclosure has moved from Archived to Draft status</description>
    <label>Unarchived</label>
</RecordType>